ENHANCEMENT: Recommendations Received Event Listener (ALL-491)
Closes ALLIN-491

Reviewed-by: Adam Skubicha <askubicha@silenteight.com>
Reviewed-by: Karol Lipiec <klipiec@silenteight.com>
Merged from: https://gitlab.silenteight.com/all-in/core-bridge/-/merge_requests/21